Corrigido o bug com acentos

--- a/templates/map.html
+++ b/templates/map.html
@@ -32,9 +32,9 @@
         {% elif school.zone == 274 %}
           color: 'black',
           fillColor: 'black',
-        {% else %}
-          color: 'green',
-          fillColor: 'green',
+        {% elif school.zone == 275 %}
+          color: '#006400',
+          fillColor: '#006400',
         {% endif %}
         fillOpacity: 0.6});
       {% autoescape off %}
