--- a/templates/map.html
+++ b/templates/map.html
@@ -24,10 +24,8 @@
 
     L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         maxZoom: 18,
-        attribution: 'Map data (c) <a href="http://openstreetmap.org">OpenStreetMap</a> contributors'
+        attribution: '<a href="/">Hipsografia</a></strong> {% trans "por" %}.<strong><a href="#"> Paolla Catherine v0.3.1. | <a href="http://openstreetmap.org">OpenStreetMap</a> &copy; contributors'
     }).addTo(map);
-
-    Copyright &copy; 2016 <a href="/">Hipsografia</a></strong> {% trans "Todos os direitos reservador" %}.<strong><a href="#"> Paolla Catherine
 
     {% for school in schoolList %}
       var circle = L.circle([{{ school.latitude }}, {{ school.longitude }}], {{ school.vote }}, {
