Melhorias na busca de endereço com localização

--- a/templates/_template.html
+++ b/templates/_template.html
@@ -50,7 +50,7 @@
       </div>
       <footer class="main-footer">
         <div class="pull-right hidden-xs">
-          <b>{% trans "Versao" %}</b> {{ version }}
+          <b>{% trans "Versao" %}</b> 0.4.1
         </div>
         <strong>Copyright &copy; 2016 <a href="/">Hipsografia</a></strong> {% trans "Todos os direitos reservador" %}.<strong><a href="#"> Paolla Catherine</a></strong>
       </footer>
